# BE-python

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  postman_curl_examples.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users_table.py  002_add_password_hash.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/domains/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/auth/providers/: __init__.py  base.py  email_otp.py  sms_otp.py  twilio_whatsapp.py
backend/app/domains/auth/providers/oauth/: __init__.py  base.py  google.py
backend/app/domains/auth/services/: __init__.py  login_otp_service.py  login_service.py  otp_store.py  signup_service.py  token_service.py
backend/app/domains/common/: __init__.py  exceptions.py  notifications.py  otp.py
backend/app/domains/user/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/tasks/: __init__.py  background.py
backend/app/utils/: http.py
backend/scripts/: run_dev.py
backend/tests/: __init__.py  conftest.py  test_auth_config.py  test_auth_providers.py  test_auth_schemas.py  test_health.py  test_security.py
frontend/: analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/: dev.tfvars  prod.tfvars
scripts/: push_main.sh
(+24 files in other folders)
